# qualix-tz

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
core/utils/: dataclasses.py  domain_base.py  envutils.py  http.py  testutils.py  types.py
qualix_tz/: urls.py  wsgi.py
qualix_tz/settings/: __init__.py  apps.py  base.py  middlewares.py
request_sender/: apps.py  urls.py  views.py
request_sender/domain/: factories.py  usecases.py
request_sender/static/css/: style.css
request_sender/static/js/: scripts.js
request_sender/templates/: form.html
request_sender/tests/domain/: test_factories.py  test_usecases.py
